src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) const char* GraphicalCodeDetector_decode_0(void* self, void* img, void* points, void* straight_code);
extern "C" __declspec(dllexport) const char* GraphicalCodeDetector_detectAndDecode_0(void* self, void* img, void* points, void* straight_code);
extern "C" __declspec(dllexport) bool GraphicalCodeDetector_detectMulti_0(void* self, void* img, void* points);
extern "C" __declspec(dllexport) bool GraphicalCodeDetector_decodeMulti_0(void* self, void* img, void* points, void* decoded_info, void* straight_code);
extern "C" __declspec(dllexport) bool GraphicalCodeDetector_detectAndDecodeMulti_0(void* self, void* img, void* decoded_info, void* points, void* straight_code);
extern "C" __declspec(dllexport) void QRCodeDetector_Delete(void* self);
extern "C" __declspec(dllexport) void* QRCodeDetector_New_0();
extern "C" __declspec(dllexport) void* QRCodeDetector_setEpsX_0(void* self, double epsX);
extern "C" __declspec(dllexport) void* QRCodeDetector_setEpsY_0(void* self, double epsY);
extern "C" __declspec(dllexport) void* QRCodeDetector_setUseAlignmentMarkers_0(void* self, bool useAlignmentMarkers);
extern "C" __declspec(dllexport) const char* QRCodeDetector_decodeCurved_0(void* self, void* img, void* points, void* straight_qrcode);
extern "C" __declspec(dllexport) const char* QRCodeDetector_detectAndDecodeCurved_0(void* self, void* img, void* points, void* straight_qrcode);
extern "C" __declspec(dllexport) void* QRCodeDetector_getEncoding_0(void* self, int codeIdx);
extern "C" __declspec(dllexport) void QRCodeDetectorAruco_Delete(void* self);
extern "C" __declspec(dllexport) void* QRCodeDetectorAruco_New_0();
extern "C" __declspec(dllexport) void* QRCodeDetectorAruco_getDetectorParameters_0(void* self);
extern "C" __declspec(dllexport) void* QRCodeDetectorAruco_setDetectorParameters_0(void* self, void* params);
extern "C" __declspec(dllexport) void* QRCodeDetectorAruco_getArucoParameters_0(void* self);
extern "C" __declspec(dllexport) void QRCodeDetectorAruco_setArucoParameters_0(void* self, void* params);
extern "C" __declspec(dllexport) void QRCodeDetectorAruco_Params_Delete(void* self);
extern "C" __declspec(dllexport) void* QRCodeDetectorAruco_Params_New_0();
extern "C" __declspec(dllexport) float QRCodeDetectorAruco_Params_minModuleSizeInPyramid_get(void* self);
extern "C" __declspec(dllexport) void QRCodeDetectorAruco_Params_minModuleSizeInPyramid_set(void* self, float val);
extern "C" __declspec(dllexport) float QRCodeDetectorAruco_Params_maxRotation_get(void* self);
extern "C" __declspec(dllexport) void QRCodeDetectorAruco_Params_maxRotation_set(void* self, float val);
extern "C" __declspec(dllexport) float QRCodeDetectorAruco_Params_maxModuleSizeMismatch_get(void* self);
extern "C" __declspec(dllexport) void QRCodeDetectorAruco_Params_maxModuleSizeMismatch_set(void* self, float val);
extern "C" __declspec(dllexport) float QRCodeDetectorAruco_Params_maxTimingPatternMismatch_get(void* self);
extern "C" __declspec(dllexport) void QRCodeDetectorAruco_Params_maxTimingPatternMismatch_set(void* self, float val);
extern "C" __declspec(dllexport) float QRCodeDetectorAruco_Params_maxPenalties_get(void* self);
extern "C" __declspec(dllexport) void QRCodeDetectorAruco_Params_maxPenalties_set(void* self, float val);
extern "C" __declspec(dllexport) float QRCodeDetectorAruco_Params_maxColorsMismatch_get(void* self);
extern "C" __declspec(dllexport) void QRCodeDetectorAruco_Params_maxColorsMismatch_set(void* self, float val);
extern "C" __declspec(dllexport) float QRCodeDetectorAruco_Params_scaleTimingPatternScore_get(void* self);
extern "C" __declspec(dllexport) void QRCodeDetectorAruco_Params_scaleTimingPatternScore_set(void* self, float val);
extern "C" __declspec(dllexport) void QRCodeEncoder_Delete(void* self);
extern "C" __declspec(dllexport) void* QRCodeEncoder_create_0(void* parameters);
extern "C" __declspec(dllexport) void QRCodeEncoder_encode_0(void* self, const char* encoded_info, void* qrcode);
extern "C" __declspec(dllexport) void QRCodeEncoder_encodeStructuredAppend_0(void* self, const char* encoded_info, void* qrcodes);
extern "C" __declspec(dllexport) void QRCodeEncoder_Params_Delete(void* self);
extern "C" __declspec(dllexport) void* QRCodeEncoder_Params_New_0();
extern "C" __declspec(dllexport) int QRCodeEncoder_Params_version_get(void* self);
extern "C" __declspec(dllexport) void QRCodeEncoder_Params_version_set(void* self, int val);
extern "C" __declspec(dllexport) void* QRCodeEncoder_Params_correction_level_get(void* self);
extern "C" __declspec(dllexport) void QRCodeEncoder_Params_correction_level_set(void* self, void* val);
extern "C" __declspec(dllexport) void* QRCodeEncoder_Params_mode_get(void* self);
extern "C" __declspec(dllexport) void QRCodeEncoder_Params_mode_set(void* self, void* val);
extern "C" __declspec(dllexport) int QRCodeEncoder_Params_structure_number_get(void* self);
extern "C" __declspec(dllexport) void QRCodeEncoder_Params_structure_number_set(void* self, int val);
extern "C" __declspec(dllexport) void aruco_ArucoDetector_Delete(void* self);
extern "C" __declspec(dllexport) void* aruco_ArucoDetector_New_0(void* dictionary, void* detectorParams, void* refineParams);
extern "C" __declspec(dllexport) void* aruco_ArucoDetector_New_1(void* dictionaries, void* detectorParams, void* refineParams);
extern "C" __declspec(dllexport) void aruco_ArucoDetector_detectMarkers_0(void* self, void* image, void* corners, void* ids, void* rejectedImgPoints);
extern "C" __declspec(dllexport) void aruco_ArucoDetector_detectMarkersWithConfidence_0(void* self, void* image, void* corners, void* ids, void* markersConfidence, void* rejectedImgPoints);
extern "C" __declspec(dllexport) void aruco_ArucoDetector_refineDetectedMarkers_0(void* self, void* image, void* board, void* detectedCorners, void* detectedIds, void* rejectedCorners, void* cameraMatrix, void* distCoeffs, void* recoveredIdxs);