src/OpenCV5Sharp/Generated/NativeMethods.Objdetect.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr GraphicalCodeDetector_decode_0(GraphicalCodeDetectorHandle self, MatHandle img, MatHandle points, IntPtr straight_code);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr GraphicalCodeDetector_detectAndDecode_0(GraphicalCodeDetectorHandle self, MatHandle img, IntPtr points, IntPtr straight_code);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool GraphicalCodeDetector_detectMulti_0(GraphicalCodeDetectorHandle self, MatHandle img, MatHandle points);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool GraphicalCodeDetector_decodeMulti_0(GraphicalCodeDetectorHandle self, MatHandle img, MatHandle points, IntPtr decoded_info, IntPtr straight_code);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool GraphicalCodeDetector_detectAndDecodeMulti_0(GraphicalCodeDetectorHandle self, MatHandle img, IntPtr decoded_info, IntPtr points, IntPtr straight_code);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeDetector_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr QRCodeDetector_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr QRCodeDetector_setEpsX_0(QRCodeDetectorHandle self, double epsX);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr QRCodeDetector_setEpsY_0(QRCodeDetectorHandle self, double epsY);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr QRCodeDetector_setUseAlignmentMarkers_0(QRCodeDetectorHandle self, [MarshalAs(UnmanagedType.U1)] bool useAlignmentMarkers);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr QRCodeDetector_decodeCurved_0(QRCodeDetectorHandle self, MatHandle img, MatHandle points, IntPtr straight_qrcode);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr QRCodeDetector_detectAndDecodeCurved_0(QRCodeDetectorHandle self, MatHandle img, IntPtr points, IntPtr straight_qrcode);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int QRCodeDetector_getEncoding_0(QRCodeDetectorHandle self, int codeIdx);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeDetectorAruco_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr QRCodeDetectorAruco_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr QRCodeDetectorAruco_getDetectorParameters_0(QRCodeDetectorArucoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr QRCodeDetectorAruco_setDetectorParameters_0(QRCodeDetectorArucoHandle self, QRCodeDetectorArucoParamsHandle @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr QRCodeDetectorAruco_getArucoParameters_0(QRCodeDetectorArucoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeDetectorAruco_setArucoParameters_0(QRCodeDetectorArucoHandle self, ArucoDetectorParametersHandle @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeDetectorAruco_Params_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr QRCodeDetectorAruco_Params_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float QRCodeDetectorAruco_Params_minModuleSizeInPyramid_get(QRCodeDetectorArucoParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeDetectorAruco_Params_minModuleSizeInPyramid_set(QRCodeDetectorArucoParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float QRCodeDetectorAruco_Params_maxRotation_get(QRCodeDetectorArucoParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeDetectorAruco_Params_maxRotation_set(QRCodeDetectorArucoParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float QRCodeDetectorAruco_Params_maxModuleSizeMismatch_get(QRCodeDetectorArucoParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeDetectorAruco_Params_maxModuleSizeMismatch_set(QRCodeDetectorArucoParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float QRCodeDetectorAruco_Params_maxTimingPatternMismatch_get(QRCodeDetectorArucoParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeDetectorAruco_Params_maxTimingPatternMismatch_set(QRCodeDetectorArucoParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float QRCodeDetectorAruco_Params_maxPenalties_get(QRCodeDetectorArucoParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeDetectorAruco_Params_maxPenalties_set(QRCodeDetectorArucoParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float QRCodeDetectorAruco_Params_maxColorsMismatch_get(QRCodeDetectorArucoParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeDetectorAruco_Params_maxColorsMismatch_set(QRCodeDetectorArucoParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float QRCodeDetectorAruco_Params_scaleTimingPatternScore_get(QRCodeDetectorArucoParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeDetectorAruco_Params_scaleTimingPatternScore_set(QRCodeDetectorArucoParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeEncoder_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr QRCodeEncoder_create_0(IntPtr parameters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeEncoder_encode_0(QRCodeEncoderHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? encoded_info, MatHandle qrcode);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeEncoder_encodeStructuredAppend_0(QRCodeEncoderHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? encoded_info, IntPtr qrcodes);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeEncoder_Params_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr QRCodeEncoder_Params_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int QRCodeEncoder_Params_version_get(QRCodeEncoderParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeEncoder_Params_version_set(QRCodeEncoderParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int QRCodeEncoder_Params_correction_level_get(QRCodeEncoderParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeEncoder_Params_correction_level_set(QRCodeEncoderParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int QRCodeEncoder_Params_mode_get(QRCodeEncoderParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeEncoder_Params_mode_set(QRCodeEncoderParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int QRCodeEncoder_Params_structure_number_get(QRCodeEncoderParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QRCodeEncoder_Params_structure_number_set(QRCodeEncoderParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_ArucoDetector_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_ArucoDetector_New_0(IntPtr dictionary, IntPtr detectorParams, IntPtr refineParams);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_ArucoDetector_New_1(IntPtr dictionaries, IntPtr detectorParams, IntPtr refineParams);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_ArucoDetector_detectMarkers_0(ArucoArucoDetectorHandle self, MatHandle image, IntPtr corners, MatHandle ids, IntPtr rejectedImgPoints);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_ArucoDetector_detectMarkersWithConfidence_0(ArucoArucoDetectorHandle self, MatHandle image, IntPtr corners, MatHandle ids, MatHandle markersConfidence, IntPtr rejectedImgPoints);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_ArucoDetector_refineDetectedMarkers_0(ArucoArucoDetectorHandle self, MatHandle image, IntPtr board, IntPtr detectedCorners, MatHandle detectedIds, IntPtr rejectedCorners, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr recoveredIdxs);
